GRIG 0.8.2(WIP):


GRIG 0.8.1:
- Maintenance update
- French l10n


GRIG 0.8.0:

- Frequency entry via keypad (thanks to Alessandro Zummo).
- Arrow LEFT/RIGHT will change the frequency with the smallest step. This can
  be used for tuning using external devices like the Powermate.
* Support for VFO->MEM and MEM->VFO function.
- Support on/off rig functions.
- Added an extra gigahertz digit in lcd display
- Added antenna control
- French l10n
- Fixed crash that occurs when mouse is clicked between MHz and kHz digits.
  Reported as Ubuntu bug 517816.
- Requires Gtk+ 2.12 and Hamlib 1.2.8+


GRIG 0.7.2:

- Fixed bug that caused wrong handling of RF gain, IF shift, MIC gain,
  and compressor controls (bug #1613622).
- Give volume level control higher priority to avoid jumpy behaviour
  (bug #1616926).


GRIG 0.7.1:

- A bug that caused installation to fail has been fixed (#1523367).


GRIG 0.7.0:

- Added receiver and transmitter level controls.
- Fixed bug that caused installation errors when using autoconf 2.59e.
- Pixmaps are now installed to /usr/local/share/pixmaps/grig instead of
  /usr/local/share/grig/pixmaps by default (related to the above bug).


GRIG 0.6.0:

- Save and restore RIG state.
- RF power meter scale is now functional with ranges of 5, 10, 50, 100
  and 500 watts. There is currently a bug, which causes the meter needle
  to jump up when switching between RX/TX.
- Fixed bug, which caused the frequency reading to flicker between the
  current value and a previously set value (bug #1388342). Same bug was
  found for the PTT and POWER controls, too.
- Fixed bug, which gave the error message "Can not find VFO list for this
  rig! Bug in backend?" if the rig did not have any of the rig_set_vfo or
  rig_get_vfo functions (bug #1440876).
- Better error messages when a command fails to execute.
- Fixed bug, which blocked the debug handler to properly filter messages
  coming from grig (hamlib messages were filtered correctly).


GRIG 0.5.0:
