@@ -1,0 +1,52 @@
+*~
+*.o
+*.lo
+*.la
+*.orig
+*.swp
+.version
+.dirstamp
+.deps/
+.libs/
+build/
+grig-*.tar.gz
+Makefile
+Makefile.in
+build-config.h
+build-config.h.in
+compile
+configure
+config.guess
+config.h
+config.h.in
+config.log
+config.status
+config.sub
+config.cache
+cov-int/
+depcomp
+aclocal.m4
+autom4te.cache
+INSTALL
+install-sh
+intltool-extract
+intltool-extract.in
+intltool-merge
+intltool-merge.in
+intltool-update
+intltool-update.in
+ltmain.sh
+missing
+stamp-h.in
+stamp-h
+stamp-h1
+mkinstalldirs
+libtool
+m4/
+GTAGS
+GRTAGS
+GPATH
+tags
+po/*.gmo
+po/*.sin
+po/*.sed
