@@ -1,5 +1,6 @@
-GRIG 0.8.2(WIP):
-
+GRIG 0.9.0:
+- Maintenance update
+- Align with Hamlib 4.x
 
 GRIG 0.8.1:
 - Maintenance update
